--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,10 @@ header {
   width: 100%;
   background-color: #fff;
   z-index: 90;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .header__item {
@@ -215,5 +219,259 @@ header {
 
 .header__list_link:active {
   color: #CDA274;
+}
+
+.header__burger {
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+
+.header__burger::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 5px;
+  background-color: #292F36;
+  position: absolute;
+  top: 12px;
+  left: 10px;
+}
+
+.header__burger::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 5px;
+  background-color: #292F36;
+  position: absolute;
+  bottom: 12px;
+  left: 10px;
+}
+
+.header__burger span::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 5px;
+  background-color: #292F36;
+  position: absolute;
+  top: 19px;
+  left: 10px;
+}
+
+.burger__button_active {
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+
+.burger__button_active::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 5px;
+  background-color: #292F36;
+  position: absolute;
+  top: 19px;
+  left: 10px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.burger__button_active::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  border-radius: 5px;
+  background-color: #292F36;
+  position: absolute;
+  bottom: 19px;
+  left: 10px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.burger__button_active span::after {
+  content: "";
+  display: none;
+}
+
+.burger__content {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .burger__content {
+    -webkit-transition: all 1s ease-in;
+    transition: all 1s ease-in;
+    display: block;
+    position: absolute;
+    z-index: 89;
+    width: 100vw;
+    height: 100vh;
+    background-color: #CDA274;
+    padding: 50px 15px;
+  }
+}
+
+.burger__content_item {
+  margin-bottom: 25px;
+  font-size: 25px;
+}
+
+.trans {
+  -webkit-transition: all 1s ease-in;
+  transition: all 1s ease-in;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+.interior {
+  margin-bottom: 100px;
+  padding: 194px 0 250px 0;
+  background: url(../img/main__block.jpg) center center no-repeat;
+  border-radius: 0 0 0 290px;
+  max-width: 1440px;
+  margin: auto;
+}
+
+@media (max-width: 992px) {
+  .interior {
+    border-radius: 0;
+    padding: 60px 0;
+  }
+}
+
+.interior__text {
+  max-width: 595px;
+}
+
+h1 {
+  font-family: 'DM Serif Display';
+  font-size: 75px;
+  line-height: 120%;
+  letter-spacing: 0.22px;
+  color: #292F36;
+  margin-bottom: 19px;
+}
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 35px;
+    margin-bottom: 15px;
+  }
+}
+
+.interior__text_p {
+  font-size: 22px;
+  line-height: 150%;
+  letter-spacing: 0.22px;
+}
+
+@media (max-width: 767px) {
+  .interior__text_p {
+    max-width: 300px;
+  }
+}
+
+.interior__text_btn {
+  margin-top: 35px;
+  display: inline-block;
+  padding-left: 35px;
+  line-height: 70px;
+  width: 200px;
+  height: 70px;
+  background: rgba(41, 47, 54, 0.9);
+  border: 2px solid #292F36;
+  border-radius: 19px;
+  position: relative;
+  color: #fff;
+}
+
+.interior__text_btn:hover {
+  background-color: #292f36;
+}
+
+.interior__text_btn:active {
+  background-color: #292f36;
+}
+
+@media (max-width: 576px) {
+  .interior__text_btn {
+    margin-top: 15px;
+    width: 160px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    padding: 0;
+    border-radius: 0 30px 30px 0;
+  }
+}
+
+.interior__text_btn:after {
+  content: "";
+  display: block;
+  width: 24px;
+  height: 2px;
+  background-color: #CDA274;
+  position: absolute;
+  right: 20px;
+  top: 35px;
+}
+
+@media (max-width: 576px) {
+  .interior__text_btn:after {
+    display: none;
+  }
+}
+
+.interior__text_btn:before {
+  content: "";
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: #CDA274;
+  position: absolute;
+  right: 18px;
+  top: 28px;
+}
+
+@media (max-width: 576px) {
+  .interior__text_btn:before {
+    display: none;
+  }
+}
+
+.interior__text_btn span:before {
+  content: "";
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: #CDA274;
+  position: absolute;
+  right: 18px;
+  bottom: 23px;
+}
+
+@media (max-width: 576px) {
+  .interior__text_btn span:before {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
