--- a/#saas/_header.scss
+++ b/#saas/_header.scss
@@ -7,6 +7,7 @@ header{
 	width: 100%;
 	background-color: #fff;
 	z-index: 90;
+	user-select: none;
 }
 
 
@@ -64,8 +65,6 @@ header{
 	color: #CDA274;
 }
 
-.header__list_item {
-}
 .header__list_link {
 	font-size: 20px;
 	line-height: 1;
@@ -85,4 +84,110 @@ header{
 	&:active{
 		color: #CDA274;
 	}
+}
+
+.header__burger{
+	width: 40px;
+	height: 40px;
+	position: relative;
+	&::after{
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		border-radius: 5px;
+		background-color: #292F36;
+		position: absolute;
+		top: 12px;
+		left: 10px;
+	}
+	&::before{
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		border-radius: 5px;
+		background-color: #292F36;
+		position: absolute;
+		bottom: 12px;
+		left: 10px;
+	}
+	span{
+		&::after{
+			content: "";
+			display: block;
+			width: 20px;
+			height: 2px;
+			border-radius: 5px;
+			background-color: #292F36;
+			position: absolute;
+			top: 19px;
+			left: 10px;
+		}
+	}
+}
+
+
+
+.burger__button_active{
+	width: 40px;
+	height: 40px;
+	position: relative;
+	&::after{
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		border-radius: 5px;
+		background-color: #292F36;
+		position: absolute;
+		top: 19px;
+		left: 10px;
+		transform: rotate(45deg);
+	}
+	&::before{
+		content: "";
+		display: block;
+		width: 20px;
+		height: 2px;
+		border-radius: 5px;
+		background-color: #292F36;
+		position: absolute;
+		bottom: 19px;
+		left: 10px;
+		transform: rotate(-45deg);
+	}
+	span{
+		&::after{
+			content: "";
+			display: none;
+			
+		}
+	}
+}
+.burger__content{
+	display: none;
+	@media (max-width: $Mb){
+		transition:all 1s ease-in;
+	display: block;
+	position: absolute;
+	z-index: 89;
+	width: 100vw;
+	height: 100vh;
+	background-color: #CDA274;
+	padding: 50px 15px;
+
+	}
+}
+
+.burger__content_item{
+		margin-bottom: 25px;
+		font-size: 25px;
+}
+
+
+
+.trans{
+	transition:all 1s ease-in;
+	transform: translateY(-100%);
 }
