--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ img {
 
 a {
   color: inherit;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 main {
