--- a/#saas/_interior.scss
+++ b/#saas/_interior.scss
@@ -10,6 +10,24 @@
 		border-radius: 0;
 		padding: 60px 0;
 	}
+	@media (max-width: $Mb){
+		background:  url(../img/main__block.jpg) 60% 70% no-repeat;
+		position: relative;
+		&:after{
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			display: block;
+			width: 100%;
+			height: 100%;
+			background-color: #292F36;
+			opacity: 0.25;
+			z-index: 1;
+		}
+	}
+
+	
 	
 }
 
