--- a/#saas/_interior.scss
+++ b/#saas/_interior.scss
@@ -74,6 +74,7 @@ letter-spacing: 0.22px;
 	border: 2px solid #292F36;
 	border-radius: 19px;
 	position: relative;
+	z-index: 55;
 	color: #fff;
 	&:hover{
 		background-color: rgba(41, 47, 54, 1);
