--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,7 @@ header {
   border-radius: 0 0 0 290px;
   max-width: 1440px;
   margin: auto;
+  margin-bottom: 100px;
 }
 
 @media (max-width: 992px) {
@@ -367,7 +368,7 @@ header {
     height: 100%;
     background-color: #292F36;
     opacity: 0.25;
-    z-index: 1;
+    z-index: 0;
   }
 }
 
@@ -497,5 +498,9 @@ h1 {
   .interior__text_btn span:before {
     display: none;
   }
+}
+
+.disign_elements {
+  margin-bottom: 100px;
 }
 /*# sourceMappingURL=style.css.map */
