--- a/#saas/_interior.scss
+++ b/#saas/_interior.scss
@@ -6,6 +6,7 @@
 	border-radius: 0 0 0 290px;
 	max-width: 1440px;
 	margin: auto;
+	margin-bottom: 100px;
 	@media (max-width: 992px){
 		border-radius: 0;
 		padding: 60px 0;
@@ -23,7 +24,7 @@
 			height: 100%;
 			background-color: #292F36;
 			opacity: 0.25;
-			z-index: 1;
+			z-index: 0;
 		}
 	}
 
