--- a/#saas/_interior.scss
+++ b/#saas/_interior.scss
@@ -77,6 +77,7 @@ letter-spacing: 0.22px;
 	position: relative;
 	z-index: 55;
 	color: #fff;
+	user-select: none;
 	&:hover{
 		background-color: rgba(41, 47, 54, 1);
 	}
