--- a/css/style.css
+++ b/css/style.css
@@ -651,11 +651,67 @@ h2 {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
+  padding-top: 40px;
 }
 
 .our_works__img {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
+}
+
+.our_works__img img {
+  border-radius: 0px 326px 0px 123px;
+}
+
+h3 {
+  min-width: 450px;
+  font-family: 'DM Serif Display';
+  font-size: 50px;
+  line-height: 130%;
+  letter-spacing: 0.22px;
+  margin-bottom: 42px;
+}
+
+.our_works_p {
+  max-width: 530px;
+  font-size: 22px;
+  line-height: 150%;
+  letter-spacing: 0.22px;
+}
+
+.our_works_tel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 40px 0 50px 0;
+}
+
+.our_works_tel_ico {
+  margin-right: 20px;
+  display: block;
+  width: 93px;
+  height: 93px;
+  border-radius: 50%;
+  background: #F4F0EC url(../img/tel_ico.svg) center center no-repeat;
+}
+
+.our_works_tel_text {
+  font-size: 24px;
+  line-height: 150%;
+  letter-spacing: 0.22px;
+}
+
+.our_works_btn {
+  display: inline-block;
+  background: #292F36 url(../img/arrow.svg) 90% 55% no-repeat;
+  border: 2px solid #292F36;
+  border-radius: 18px;
+  color: #fff;
+  line-height: 65px;
+  padding: 0 65px 0 31px;
 }
 /*# sourceMappingURL=style.css.map */
