--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,12 @@ h1 {
   margin-bottom: 75px;
 }
 
+@media (max-width: 576px) {
+  .disign_elements {
+    margin-bottom: 20px;
+  }
+}
+
 .disign_elements__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -647,25 +653,62 @@ h2 {
   margin-bottom: 140px;
 }
 
+@media (max-width: 767px) {
+  .our_works {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 .our_works__text {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
   padding-top: 40px;
+  margin-right: 10px;
+}
+
+@media (max-width: 992px) {
+  .our_works__text {
+    padding-top: 0;
+  }
 }
 
 .our_works__img {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 50%;
           flex: 0 1 50%;
+  min-width: 350px;
+}
+
+@media (max-width: 767px) {
+  .our_works__img {
+    margin-bottom: 20px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 .our_works__img img {
   border-radius: 0px 326px 0px 123px;
 }
 
+@media (max-width: 576px) {
+  .our_works__img img {
+    border-radius: 5px;
+  }
+}
+
+@media (max-width: 576px) {
+  .our_works__img {
+    min-width: 300px;
+  }
+}
+
 h3 {
-  min-width: 450px;
   font-family: 'DM Serif Display';
   font-size: 50px;
   line-height: 130%;
@@ -673,11 +716,30 @@ h3 {
   margin-bottom: 42px;
 }
 
+@media (max-width: 992px) {
+  h3 {
+    font-size: 35px;
+    margin-bottom: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  h3 {
+    display: none;
+  }
+}
+
 .our_works_p {
   max-width: 530px;
   font-size: 22px;
   line-height: 150%;
   letter-spacing: 0.22px;
+}
+
+@media (max-width: 992px) {
+  .our_works_p {
+    font-size: 20px;
+  }
 }
 
 .our_works_tel {
@@ -688,6 +750,12 @@ h3 {
       -ms-flex-align: center;
           align-items: center;
   margin: 40px 0 50px 0;
+}
+
+@media (max-width: 600px) {
+  .our_works_tel {
+    margin: 25px 0 35px;
+  }
 }
 
 .our_works_tel_ico {
@@ -713,5 +781,24 @@ h3 {
   color: #fff;
   line-height: 65px;
   padding: 0 65px 0 31px;
+}
+
+.our_works_title {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .our_works_title {
+    display: block;
+    font-size: 25px;
+    margin-bottom: 20px;
+    font-family: 'DM Serif Display';
+  }
+}
+
+@media (max-width: 576px) {
+  .our_works_title {
+    font-size: 22px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
