--- a/#saas/_our_works.scss
+++ b/#saas/_our_works.scss
@@ -70,7 +70,7 @@ h3{
 	align-items: center;
 	margin: 40px 0 50px 0;
 	@media (max-width: 600px){
-		margin: 25px 0 35px;
+		margin: 15px 0 25px;
 	}
 	
 }
@@ -82,11 +82,20 @@ h3{
 	height: 93px;
 	border-radius: 50%;
 	background: #F4F0EC url(../img/tel_ico.svg) center center no-repeat;
+	@media (max-width: $Mb){
+		width: 60px;
+		height: 60px;
+		background-size: 40%;
+	}
+	
 }
 .our_works_tel_text {
 font-size: 24px;
 line-height: 150%;
 letter-spacing: 0.22px;
+@media (max-width: $Tb){
+	font-size: 17px;
+}
 }
 
 .our_works_btn{
@@ -97,6 +106,9 @@ border-radius: 18px;
 color: #fff;
 line-height: 65px;
 padding: 0 65px 0 31px;
+@media (max-width: $Mb){
+	border-radius: 0 30px 30px 0;
+}
 }
 
 .our_works_title{
