--- a/#saas/style.scss
+++ b/#saas/style.scss
@@ -4,8 +4,8 @@
 @import "_interior.scss";
 @import "_design_elements.scss";
 @import "_our_works.scss";
-
-
+@import "_reviews.scss";
+@import "_brand.scss";
 
 
 
