--- a/#saas/_our_works.scss
+++ b/#saas/_our_works.scss
@@ -3,8 +3,11 @@
 	margin-bottom: 140px;
 	@media (max-width: $Tb){
 		flex-direction: column-reverse;
+		margin-bottom: 80px;
 	}
-	
+	@media (max-width: $Mb){
+		margin-bottom: 60px;
+	}	
 }
 
 
@@ -108,6 +111,11 @@ line-height: 65px;
 padding: 0 65px 0 31px;
 @media (max-width: $Mb){
 	border-radius: 0 30px 30px 0;
+	font-size: 16px;
+background-size: 10%;
+	padding: 0 45px 0 10px;
+	background: #292F36 url(../img/arrow.svg) 95% 52% no-repeat;
+	line-height: 50px;
 }
 }
 .our_works_title{
