--- a/#saas/_bem.scss
+++ b/#saas/_bem.scss
@@ -31,7 +31,11 @@ body{
 .content{
 	margin: 0 auto;
 	max-width: 1220px;
-	padding: 0 10px;
+	padding: 0 20px;
+	@media (max-width: 600px){
+		padding: 0 10px;
+	}
+	
 }
 
 .wrapper{
