--- a/css/style.css
+++ b/css/style.css
@@ -1450,4 +1450,122 @@ h3 {
   border-radius: 50%;
   background: #F4F0EC url(../img/arrow_card.svg) center center no-repeat;
 }
+
+.connection {
+  margin: 100px 0 130px 0;
+  background-color: #292F36;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 70px;
+  padding: 97px 0;
+  color: #fff;
+  letter-spacing: 0.22px;
+  line-height: 150%;
+}
+
+@media (max-width: 992px) {
+  .connection {
+    padding: 70px 0;
+    margin: 80px 0 100px 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .connection {
+    padding: 40px 0;
+    margin: 50px 0 70px 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .connection {
+    border-radius: 5px;
+    margin: 0 0 40px 0;
+  }
+}
+
+.connection__title {
+  font-size: 50px;
+  font-family: 'DM Serif Display';
+  margin-bottom: 9px;
+}
+
+@media (max-width: 767px) {
+  .connection__title {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .connection__title {
+    font-size: 22px;
+  }
+}
+
+.connection__p {
+  font-size: 22px;
+  margin-bottom: 31px;
+}
+
+@media (max-width: 767px) {
+  .connection__p {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  .connection__p {
+    font-size: 14px;
+    line-height: 110%;
+    margin-bottom: 20px;
+  }
+}
+
+.connection__btn {
+  display: inline-block;
+  line-height: 70px;
+  font-size: 18px;
+  background: #CDA274;
+  border: 2px solid #CDA274;
+  -webkit-box-shadow: 1px 0px 18px rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 0px 18px rgba(0, 0, 0, 0.2);
+  border-radius: 18px;
+  padding: 0 34px;
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+}
+
+.connection__btn:hover {
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+  background: #aa7c4c;
+}
+
+.connection__btn:active {
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+  background: #926b42;
+}
+
+@media (max-width: 767px) {
+  .connection__btn {
+    padding: 0 15px;
+    line-height: 50px;
+  }
+}
+
+@media (max-width: 600px) {
+  .connection__btn {
+    border-radius: 5px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
