--- a/#saas/_footer.scss
+++ b/#saas/_footer.scss
@@ -92,6 +92,17 @@ letter-spacing: 0.22px;
 
 .hgt{
 	@media (max-width: 600px){
-		display: none;
+		height: 30px;
+		transition: all 2s linear;
+		li{
+			display: none;
+		}
 	}	
+}
+
+.footer__list_explore{
+	@media (max-width: 600px){
+		margin: 10px 0;
+	}
+	
 }
